--- a/vars/groups.yml
+++ b/vars/groups.yml
@@ -1,10 +1,10 @@
 ---
 aws_groups:
-  - fresno
-  - sacramento
-  - losangeles
-  - sanfrancisco
-  - indio
-  - palmsprings
-  - sandiego
-  - napa
+  - tokyo
+  - shinjuku
+  - osaka
+  - iwakuni
+  - paris
+  - hongkong
+  - honolulu
+  
