--- a/vars/users.yml
+++ b/vars/users.yml
@@ -1,8 +1,8 @@
 ---
 users:
-  - name: user01
+  - name: bob
     aws_groups: "tokyo, shinjuku, iwakuni"
-  - name: user02
+  - name: joe
     aws_groups: "fukuoka, osaka, paris"
-  - name: user03
+  - name: jim
     aws_groups: "hongkong, iwakuni, tokyo"
